--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
     <header>
         <h1>Teaching Portal</h1>
         <p>Empowering Students for Success</p>
+        <nav style="margin-top: 1rem;">
+            <a href="index.html" style="color: #fff; margin: 0 10px;">Home</a>
+            <a href="explore.html" style="color: #fff; margin: 0 10px;">Explore</a>
+            <a href="puzzles.html" style="color: #fff; margin: 0 10px;">Puzzles</a>
+            <a href="about-me.html" style="color: #fff; margin: 0 10px;">About Me</a>
+        </nav>
     </header>
     <div class="container">
         <h2>Welcome, Students!</h2>
