add profile pic

--- a/about-me.html
+++ b/about-me.html
@@ -103,7 +103,7 @@
 <body>
     <div class="container">
         <div class="profile-section">
-            <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=PrashantSachan" alt="Prashant Sachan" class="profile-img">
+            <img src="resources/images/ps.png" alt="Prashant Sachan" class="profile-img">
             <h1>Prashant Sachan</h1>
             <p>Educational Content Creator & Technology Enthusiast</p>
         </div>
