--- a/explore.html
+++ b/explore.html
@@ -114,7 +114,7 @@
             <a href="math.html" class="explore-card">
                 <div class="card-icon">🔢</div>
                 <h2 class="card-title">Math Magic</h2>
-                <p class="card-description">Experience the magic of numbers through interactive problems and mind-bending math challenges.</p>
+                <p class="card-description">Test your math skills with fun interactive games!</p>
             </a>
 
             <a href="art.html" class="explore-card">
@@ -135,7 +135,7 @@
                 <p class="card-description">Journey through time and learn about fascinating historical events and people.</p>
             </a>
 
-            <a href="coding.html" class="explore-card">
+            <a href="code-club.html" class="explore-card">
                 <div class="card-icon">💻</div>
                 <h2 class="card-title">Code Club</h2>
                 <p class="card-description">Take your first steps into the world of programming with fun coding activities!</p>
