--- a/explore.html
+++ b/explore.html
@@ -52,10 +52,15 @@
             transform: translateY(-5px);
         }
 
+        .explore-card:hover .card-icon {
+            transform: scale(1.2);
+            transition: transform 0.3s ease;
+        }
+
         .card-icon {
             font-size: 3rem;
-            text-align: center;
             margin-bottom: 1rem;
+            transition: transform 0.3s ease;
         }
 
         .card-title {
@@ -127,12 +132,6 @@
                 <p class="card-description">Express yourself through art! Learn different techniques and create beautiful masterpieces.</p>
             </a>
 
-            <a href="nature.html" class="explore-card">
-                <div class="card-icon">🌿</div>
-                <h2 class="card-title">Nature Study</h2>
-                <p class="card-description">Explore the wonderful world of plants, animals, and natural phenomena!</p>
-            </a>
-
             <a href="history.html" class="explore-card">
                 <div class="card-icon">⏳</div>
                 <h2 class="card-title">Time Travel</h2>
@@ -143,6 +142,12 @@
                 <div class="card-icon">💻</div>
                 <h2 class="card-title">Code Club</h2>
                 <p class="card-description">Take your first steps into the world of programming with fun coding activities!</p>
+            </a>
+
+            <a href="word-game.html" class="explore-card">
+                <div class="card-icon">📝</div>
+                <h2 class="card-title">Word Games</h2>
+                <p class="card-description">Challenge yourself with our Wordle-style game! Improve your vocabulary and spelling skills.</p>
             </a>
         </div>
     </div>
